--- a/src/template.html
+++ b/src/template.html
@@ -11,283 +11,254 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
-    <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
-    <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+		<!-- Put here your site title -->
+		<title>[Your name here] | Developer</title>
+		<!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
+		<meta name="keywords" content="[username], [name], skill" />
+		<!-- Improve your SEO by adding a small descrption of you -->
+		<meta name="description" content="[Your name here] | Developer" />
 
-    <!-- Required librarys -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script>
-      ScrollReveal({ reset: false });
-    </script>
+		<!-- Required librarys -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<script src="https://unpkg.com/scrollreveal"></script>
+		<script>
+			ScrollReveal({ reset: false });
+		</script>
 
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
+		<!-- Remove this script once you setup your custom portfolio -->
+		<script async defer src="https://buttons.github.io/buttons.js"></script>
+	</head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
-  <body>
-    <div id="top"></div>
+	<!-- Follow the HTML instructions to create your stunning portfolio website -->
+	<body>
+		<div id="top"></div>
 
-    <!-- **** Hero Section **** -->
-    <div id="hero" class="jumbotron">
-      <div class="container">
-        <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
-          <br />
-          I'm the Unknown Developer.
-        </h1>
-        <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
-        </p>
-      </div>
-    </div>
-    <!-- /END Hero Section -->
+		<!-- **** Hero Section **** -->
+		<div id="hero" class="jumbotron">
+			<div class="container">
+				<h1 class="hero-title" class="load-hidden">
+					Hi, my name is <span class="text-color-main">Ismail Gaddipati</span>
+					<br />
+					I build things for the web!
+				</h1>
+				<p class="hero-cta" class="load-hidden">
+					<a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+				</p>
+			</div>
+		</div>
+		<!-- /END Hero Section -->
 
-    <!-- **** About Section **** -->
-    <section id="about">
-      <div class="container">
-        <h2 class="section-title">
-          About me
-        </h2>
-        <div class="row about-wrapper">
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image">
-              <img
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="./assets/profile.jpg"
-                alt="Profile Image"
-              />
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__info">
-              <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
-              </p>
-              <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
-              </p>
-              <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                  View Resume
-                </a>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- /END About Section -->
+		<!-- **** About Section **** -->
+		<section id="about">
+			<div class="container">
+				<h2 class="section-title">
+					About me
+				</h2>
+				<div class="row about-wrapper">
+					<div class="col-md-6 col-sm-12">
+						<div class="about-wrapper__image">
+							<img
+								class="img-fluid rounded shadow-lg"
+								height="auto"
+								width="300px"
+								src="./assets/avatar.jpg"
+								alt="Profile Image"
+							/>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12">
+						<div class="about-wrapper__info">
+							<p class="about-wrapper__info-text">
+								Hello! I'm Ismail, a software engineer based in New York, NY who
+								enjoys building things that live on the internet. I develop
+								exceptional websites and web apps that provide intuitive,
+								pixel-perfect user interfaces with efficent and modern backends.
+							</p>
+							<span class="d-flex mt-3">
+								<a
+									target="_blank"
+									class="cta-btn cta-btn--resume"
+									href="https://drive.google.com/open?id=1oSCz8_SiAyfHmfRt5szqz5o7HYHlvhCj"
+								>
+									View Resume
+								</a>
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /END About Section -->
 
-    <!-- **** Projects Section **** -->
-    <section id="projects">
-      <div class="container">
-        <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">
-            Projects
-          </h2>
+		<!-- **** Projects Section **** -->
+		<section id="projects">
+			<div class="container">
+				<div class="project-wrapper">
+					<h2 class="section-title dark-blue-text">
+						Projects
+					</h2>
 
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+					<!-- Each .row is a project -->
+					<div class="row">
+						<div class="col-lg-4 col-sm-12">
+							<div class="project-wrapper__text">
+								<h3 class="project-wrapper__text-title">Boss Clothing</h3>
+								<div>
+									<p class="mb-4">
+                      Created an E-Commerce WebApp using
+                      React.js, Redux, Firebase and stripe to process payments. 
+									</p>
+								</div>
+								<a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+									See Live
+								</a>
+								<a target="_blank" class="cta-btn text-color-main" href="#!">
+									Source Code
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-8 col-sm-12">
+							<div class="project-wrapper__image">
+									<div data-tilt class="thumbnail rounded">
+										<img class="img-fluid" src="./assets/Boss-Clothing.png" />
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- /END Project -->
+					<!-- Each .row is a project -->
+					<div class="row">
+						<div class="col-lg-4 col-sm-12">
+							<div class="project-wrapper__text">
+								<h3 class="project-wrapper__text-title">KeepItReel</h3>
+								<div>
+									<p class="mb-4">
+										Movie Style website desiged to give the user a movie
+										friendly community to debate specific movies using our
+										comments section. Built during a 2-week Sprint being 1 of 4
+										it was my job to design and build wireframes for site.
+										Technology used: React, Node.Js, Sql Postgress database,
+										IMBD API and many more!
+									</p>
+								</div>
+								<a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+									See Live
+								</a>
+								<a
+									target="_blank"
+									class="cta-btn text-color-main"
+									href="https://github.com/keepitreel"
+								>
+									Source Code
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-8 col-sm-12">
+							<div class="project-wrapper__image">
+									<div data-tilt class="thumbnail rounded">
+										<img
+											class="img-fluid"
+											src="./assets/KeepItReel-Signin.png"
+										/>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- /END Project -->
+					<!-- Each .row is a project -->
+					<div class="row">
+						<div class="col-lg-4 col-sm-12">
+							<div class="project-wrapper__text">
+								<h3 class="project-wrapper__text-title">RoboFriends</h3>
+								<div>
+									<p class="mb-4">
+										Small React built app used for filtering through an API.
+									</p>
+								</div>
+								<a
+									target="_blank"
+									class="cta-btn cta-btn--hero"
+									href="https://gaddipi.github.io/RoboFriends/"
+								>
+									See Live
+								</a>
+								<a
+									target="_blank"
+									class="cta-btn text-color-main"
+									href="https://github.com/Gaddipi/RoboFriends"
+								>
+									Source Code
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-8 col-sm-12">
+							<div class="project-wrapper__image">
 
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+									<div data-tilt class="thumbnail rounded">
+										<img class="img-fluid" src="./assets/RoboFriends.png" />
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!-- /END Project -->
+				</div>
+			</div>
+		</section>
+		<!-- /END Projects Section -->
 
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-        </div>
-      </div>
-    </section>
-    <!-- /END Projects Section -->
+		<!-- **** Contact Section **** -->
+		<section id="contact">
+			<div class="container">
+				<h2 class="section-title">
+					Contact
+				</h2>
+				<div class="contact-wrapper">
+					<p class="contact-wrapper__text">
+						Lets build something Together!
+					</p>
+					<a
+						target="_blank"
+						class="cta-btn cta-btn--resume"
+						href="mailto:gaddipi@email.com"
+						>Get In Touch</a
+					>
+				</div>
+			</div>
+		</section>
+		<!-- /END Contact Section -->
 
-    <!-- **** Contact Section **** -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="section-title">
-          Contact
-        </h2>
-        <div class="contact-wrapper">
-          <p class="contact-wrapper__text">
-            [Put your call to action here]
-          </p>
-          <a
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
-          >
-        </div>
-      </div>
-    </section>
-    <!-- /END Contact Section -->
-
-    <!-- **** Footer Section **** -->
-    <footer class="footer navbar-static-bottom">
-      <div class="container">
-        <a href="#top" class="back-to-top">
-          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-        </a>
-        <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
-          </a>
-        </div>
-
-        <hr />
-
-        <!-- If you give me some credit, will be huge for me :) -->
-        <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
-          </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
-      </div>
-    </footer>
-    <!-- /END Footer Section -->
-  </body>
+		<!-- **** Footer Section **** -->
+		<footer class="footer navbar-static-bottom">
+			<div class="container">
+				<a href="#top" class="back-to-top">
+					<i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+				</a>
+				<div class="social-links">
+					<a href="https://twitter.com/thewittycoder1" target="_blank">
+						<i class="fa fa-twitter fa-inverse"></i>
+					</a>
+					<a href="https://www.linkedin.com/in/igaddipati/" target="_blank">
+						<i class="fa fa-linkedin fa-inverse"></i>
+					</a>
+					<a href="https://github.com/Gaddipi" target="_blank">
+						<i class="fa fa-github fa-inverse"></i>
+					</a>
+				</div>
+				<hr />
+			</div>
+		</footer>
+		<!-- /END Footer Section -->
+	</body>
 </html>
