--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
 		<link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
 		<!-- Put here your site title -->
-		<title>Ismail Gaddipati| Developer</title>
+		<title>Ismail Gaddipati | Developer</title>
 		<!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
 		<meta name="keywords" content="[username], [name], skill" />
 		<!-- Improve your SEO by adding a small descrption of you -->
@@ -69,7 +69,8 @@
 							<img
 								class="img-fluid rounded shadow-lg"
 								height="auto"
-								width="300px"
+                width="300px"
+                radius
 								src="./assets/avatar.jpg"
 								alt="Profile Image"
 							/>
