--- a/src/template.html
+++ b/src/template.html
@@ -15,10 +15,13 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
 		<!-- Put here your site title -->
-		<title>Ismail Gaddipati | Developer</title>
+		<title>Ismail Gaddipati | Creator</title>
 		<!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
 		<meta name="keywords" content="[username], [name], skill" />
 		<!-- Improve your SEO by adding a small descrption of you -->
@@ -82,7 +85,7 @@
 								Hello! I'm Ismail, a software engineer based in New York, NY who
 								enjoys building things that live on the internet. I develop
 								exceptional websites and web apps that provide intuitive,
-								pixel-perfect user interfaces with efficent and modern backends.
+								pixel-perfect user interfaces with efficient and modern backends.
 							</p>
 							<span class="d-flex mt-3">
 								<a
