--- a/src/template.html
+++ b/src/template.html
@@ -147,7 +147,7 @@
 								<h3 class="project-wrapper__text-title">KeepItReel</h3>
 								<div>
 									<p class="mb-4">
-										Movie Style website desiged to give the user a movie
+										Movie Style website designed to give the user a movie
 										friendly community to debate specific movies using our
 										comments section. Built during a 2-week Sprint being 1 of 4
 										it was my job to design and build wireframes for site.
