--- a/src/template.html
+++ b/src/template.html
@@ -91,7 +91,7 @@
 								<a
 									target="_blank"
 									class="cta-btn cta-btn--resume"
-									href="https://drive.google.com/open?id=1oSCz8_SiAyfHmfRt5szqz5o7HYHlvhCj"
+									href="https://drive.google.com/file/d/1DGqbMVX8mMootZaoj-lrkucqBf3vBJd1/view"
 								>
 									View Resume
 								</a>
