updated email error

--- a/src/template.html
+++ b/src/template.html
@@ -83,7 +83,7 @@
 						<div class="about-wrapper__info">
 							<p class="about-wrapper__info-text">
 								Hello! I'm Ismail, a software engineer based in New York, NY who
-								enjoys building things that live on the internet. I develop
+								enjoys' building things that live on the internet. I develop
 								exceptional websites and web apps that provide intuitive,
 								pixel-perfect user interfaces with efficient and modern backends.
 							</p>
@@ -118,7 +118,7 @@
 								<h3 class="project-wrapper__text-title">Boss Clothing</h3>
 								<div>
 									<p class="mb-4">
-                      Created an E-Commerce WebApp using
+                      Developed an E-Commerce WebApp using
                       React.js, Redux, Firebase and stripe to process payments. 
 									</p>
 								</div>
@@ -235,7 +235,7 @@
 					<a
 						target="_blank"
 						class="cta-btn cta-btn--resume"
-						href="mailto:gaddipi@email.com"
+						href="mailto:gaddipi@gmail.com"
 						>Get In Touch</a
 					>
 				</div>
