--- a/src/template.html
+++ b/src/template.html
@@ -122,10 +122,10 @@
                       React.js, Redux, Firebase and stripe to process payments. 
 									</p>
 								</div>
-								<a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+								<a target="_blank" class="cta-btn cta-btn--hero" href="https://boss-clothing.herokuapp.com/">
 									See Live
 								</a>
-								<a target="_blank" class="cta-btn text-color-main" href="#!">
+								<a target="_blank" class="cta-btn text-color-main" href="https://github.com/Gaddipi/Boss_Clothing">
 									Source Code
 								</a>
 							</div>
