--- a/src/template.html
+++ b/src/template.html
@@ -82,10 +82,9 @@
 					<div class="col-md-6 col-sm-12">
 						<div class="about-wrapper__info">
 							<p class="about-wrapper__info-text">
-								Hello! I'm Ismail, a software engineer based in New York, NY who
-								enjoys' building things that live on the internet. I develop
-								exceptional websites and web apps that provide intuitive,
-								pixel-perfect user interfaces with efficient and modern backends.
+								Hello! I'm Ismail, a software engineer based in New York, NY. I enjoy building
+								things that live on the internet. I develop exceptional websites and web apps that 
+								provide intuitive, pixel-perfect user interfaces with efficient and modern backends. 
 							</p>
 							<span class="d-flex mt-3">
 								<a
